--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>welcome to the world sankar</h1>
-    <p>SANKAR SIVA</p>
+    <b> Showing ganeshmaharaj image </b>
+    <img src="ganesh_maharaj.jpg" alt="not loading" width="600" height="400">
 </body>
 </html>
