--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>sankar-app</title>
 </head>
 <body>
-    <h1>welcome to the world sankar</h1>
+    <h1>welcome to the world sankar  test</h1>
     <b> Showing ganeshmaharaj image </b>
     <img src="ganesh_maharaj.jpg" alt="not loading" width="600" height="400">
 </body>
